--- a/src/backend/eeyore/makefile
+++ b/src/backend/eeyore/makefile
@@ -1,9 +1,9 @@
 OUT_PATH := ../../../build/backend/eeyore
 UTILS_PATH := ../../utils
-DEFINE_PATH := ../../define
+SYNTAX_ANALYSIS_PATH := ../../frontend/syntax_analysis
 
 CC := g++
-CC_FLAGS := -c -std=c++17 -I $(UTILS_PATH) -I $(DEFINE_PATH)
+CC_FLAGS := -c -std=c++17 -I $(UTILS_PATH) -I $(SYNTAX_ANALYSIS_PATH)
 
 SRCS := $(wildcard *.cc)
 OBJS := $(patsubst %.cc, %.o, $(SRCS))
